--- a/style.css
+++ b/style.css
@@ -1,21 +1,36 @@
 html {
   scroll-behavior: smooth;
+  
 }
 
 body {
   font-family: 'Work Sans';
-
 }
 
 #header{
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.5);
   display: flex;
  flex-wrap: nowrap;
  justify-content: center;
- width: 100% !important;
+ width: 100%;
+ height: 13%;
+ position: fixed;
+ top: 0;
+ z-index: 1;
 }
 
+.pro_pic{
+  padding-top: 120px;
+}
 
+.left_header{
+  min-width:65%;
+  padding-left: 50px;
+}
+
+.left_header img {
+  float: left;
+}
 .right_header li {
   display: inline;
 }
@@ -24,18 +39,23 @@ body {
   padding: 15px;
 }
 
-.right_header{
-  max-width: 25%;
+ .right_header{
+  min-width: 35%;
+  margin-right: -170px;
 }
 
-.left_header{
-  min-width:75%;
+@media (max-width: 1000px){
+  .right_header ul{
+    max-width: 100px;
+  }
 }
 
-.left_header img {
-  float: left;
+html .right_header li:hover {
+  border: none;
+  border-radius: 75%;
+  padding: 10px;
+  box-shadow: 0 0 10px #b7d0e4;
 }
-
 
 .main_wrapper {
   display: flex;
@@ -58,6 +78,7 @@ body {
   -moz-animation: slideIn 2s forwards;
   animation: slideIn 2s forwards;
   animation-delay:1700ms;
+
 }
 
 
@@ -101,7 +122,9 @@ body {
   margin-top: -30px;
 }
 
-
+.intro_wrapper p{
+  line-height: 27px;
+}
 .intro_wrapper p, .intro_wrapper h2 {
   margin-top: -15px;
 }
@@ -127,7 +150,7 @@ footer{
   padding-top: 100px;
 }
 
-.buttons button:hover {
+.buttons button:hover, .right_header li:hover{
   -webkit-transition: all 500ms ease;
 -moz-transition: all 500ms ease;
 -ms-transition: all 500ms ease;
@@ -157,48 +180,35 @@ transition: all 500ms ease;
   
 }
 
-
-
-
-
-
 #about_me {
   display: flex;
-  margin-top: 300px;
+  margin-top: 200px;
+  text-align: center;
 }
 
-#about_me .info {
-  padding: 20px;
-  border: 5px solid black;
-  border-radius: 5%;
-  min-width: 50%;
-  border: 20px;
-  margin-right: 20px;
+#about_me p {
+  padding-left: 12%;
+  padding-right: 12%;
+  font-size: 17px;
+  line-height: 27px;
 }
 
 .info h1 {
   width: 100%;
-  background-color: lightblue;
 }
 
-.box {
-  min-width: 40%;
-  height: 550px;
-  margin: 15px;
+.logos {
+  font-size: 50px;
+  padding: 30px;
 }
 
-.box img {
-  border: 1px solid white;
-  /*position: relative;*/
-}
-
-#selfie {
-  /*position: absolute;*/
-  width: 300px;
-  height: 300px;
-  float: left;
-  margin-top: 250px;
-  margin-left: 0px;
+.logos i:hover {
+  font-size: 55px;
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 
 a {
@@ -227,15 +237,10 @@ footer a:hover {
 
 #preloader {
   background: white url(https://flevix.com/wp-content/uploads/2020/01/Preloader.gif) no-repeat center center;
-  background-size: 80%;
-  height: 100vh;
+  background-size: 100%;
+  height: 100%;
   width: 100%;
   position: fixed;
   z-index: 100;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
