--- a/style.css
+++ b/style.css
@@ -50,13 +50,6 @@ body {
   }
 }
 
-html .right_header li:hover {
-  border: none;
-  border-radius: 75%;
-  padding: 10px;
-  box-shadow: 0 0 10px #b7d0e4;
-}
-
 .main_wrapper {
   display: flex;
   max-height: 30%;
@@ -149,12 +142,12 @@ footer{
   padding-top: 100px;
 }
 
-.buttons button:hover, .right_header li:hover{
+.buttons button:hover{
   -webkit-transition: all 500ms ease;
--moz-transition: all 500ms ease;
--ms-transition: all 500ms ease;
--o-transition: all 500ms ease;
-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
   color: white;
   border: 3px solid rgb(41, 92, 108);
   box-shadow: 0 0 10px #2b4f6c;
@@ -179,6 +172,28 @@ transition: all 500ms ease;
   
 }
 
+.underline_hover_effect{
+  display: inline-block;
+  padding-bottom: 0.25rem;
+  position: relative;
+}
+
+.underline_hover_effect::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: rgb(108, 160, 233);
+  transition: width 0.25s ease-out;
+}
+
+.underline_hover_effect:hover::before{
+  width: 100%;
+}
+
+
 #about_me {
   display: flex;
   margin-top: 200px;
@@ -201,15 +216,6 @@ transition: all 500ms ease;
   padding: 30px;
 }
 
-.logos i:hover {
-  font-size: 55px;
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
-}
-
 a {
   text-decoration: none;
   color: black;
@@ -219,18 +225,5 @@ footer {
   text-align: center;
   padding: 30px;
   font-size: 50px;
-}
-
-footer a:hover {
-  box-shadow: 0 0 10px #2b4f6c;
-  border: 3px solid rgb(41, 92, 108);
-  border-radius: 100%;
-  padding: 10px;
-  border: none;
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
 }
 
