--- a/style.css
+++ b/style.css
@@ -221,9 +221,106 @@ a {
   color: black;
 }
 
+#portfolio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-item img{
+ width: 500px;
+ height: 400px;
+ margin-left: -200px;
+ background: red;
+ position: absolute;
+ -webkit-border-radius: 2%;
+  -moz-border-radius: 2%;
+  border-radius: 2%;
+
+  -webkit-box-shadow: 0px 0px 15px 5px rgba(226, 178, 200, 0.831);
+  -moz-box-shadow: 0px 0px 15px 5px rgba(226, 178, 200, 0.831);
+  box-shadow: 0px 0px 15px 5px rgba(226, 178, 200, 0.831);
+}
+
+.project-description {
+  background: white;
+  width: 400px;
+  height: 300px;
+  margin-top: 70px;
+  margin-left: 60px;
+  padding-left: 20px;
+  padding-top: 15px;
+  position: absolute;
+  -webkit-border-radius: 2%;
+  -moz-border-radius: 2%;
+  border-radius: 2%;
+
+  -webkit-box-shadow: 0px 0px 15px 5px rgba(226, 178, 200, 0.831);
+  -moz-box-shadow: 0px 0px 15px 5px rgba(226, 178, 200, 0.831);
+  box-shadow: 0px 0px 15px 5px rgba(226, 178, 200, 0.831);
+}
+
+.project-buttons{
+  padding-top: 5px;
+  margin-left: -40px;
+}
+.project-buttons li{
+  display: inline;
+}
+
+.project-buttons button{
+  border-radius: 8px;
+  border-style: none;
+  cursor: pointer;
+  margin: 0;
+  outline: none;
+  touch-action: manipulation;
+  padding: 15px 32px;
+  padding-left: 25px;
+  padding-right: 25px;
+  
+
+}
+
+.project-buttons .left-button{
+  background: rgba(206, 91, 145, 0.831);
+  border: 3px solid rgba(206, 91, 145, 0.831);
+  color: white;
+}
+
+.project-buttons .right-button{
+  background: white;
+  border-color: rgba(226, 178, 200, 0.831);
+  border: 3px solid rgba(226, 178, 200, 0.831);
+}
+
+.project-description:hover{
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
+  width: 405px;
+  height: 303px;
+}
+
+.project-title{
+  font-weight: bold;
+}
+
+.project-language{
+  margin-top: -10px;
+  font-weight: bold;
+}
+
+#contact{
+  margin-top: 500px;
+}
+
 footer {
   text-align: center;
   padding: 30px;
   font-size: 50px;
+  margin-top: 500px;
 }
 
