updated projects and brief outline of contact me

--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ a {
 }
 
 #portfolio {
+  padding-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -315,12 +316,13 @@ a {
 
 #contact{
   margin-top: 500px;
+  text-align: center;
 }
 
 footer {
   text-align: center;
   padding: 30px;
   font-size: 50px;
-  margin-top: 500px;
+  margin-top: 200px;
 }
 
